--- a/mytinerary/backend/package.json
+++ b/mytinerary/backend/package.json
@@ -10,10 +10,15 @@
   "author": "SolContreras",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.10",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
   }
 }
