--- a/mytinerary/package.json
+++ b/mytinerary/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-native-paper": "^4.11.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
